--- a/styles.css
+++ b/styles.css
@@ -9,21 +9,21 @@ body
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(180deg, rgb(59, 157, 255) 0%, rgba(226,240,255,1) 75%, rgba(251,251,251,1) 75%);
+    min-height: 100vh;
+    height: max-content;
+    background: linear-gradient(180deg, rgb(59, 157, 255) 0%, rgba(226,240,255,1) 100%);
 }
 .main
 {
     width: 90%;
-    height: 750px;
     box-shadow: 0 3px 10px rgb(235, 235, 235);
-    margin-top: 100px;
+    margin: 100px 0;
     border-radius: 10px;
 }
 .weather_today
 {
     width: 100%;
-    height: 621px;
+    height: max-content;
     background-color: rgba(244, 244, 244, 0.422);
     border-radius: 10px 10px 0 0;
     border-top: solid 2.5px white;
@@ -34,8 +34,16 @@ body
 .weather_week
 {
     width: 100%;
-    height: 129px;
+    height: max-content;
+    background-color: rgba(244, 244, 244, 0.422);
+    border-radius: 0 0 10px 10px;
+    border-bottom: solid 2.5px white;
+    border-left: solid 1.5px white;
+    border-right: solid 1.5px white;
+    display: flex;
+    justify-content: space-around;
 }
+
 .weather_today .place
 {
     display: inline;
@@ -99,6 +107,44 @@ body
     justify-content: start;
     align-items: center;
 }
+
+.weather_today .place .tempurature span img
+{
+    width: 200px;
+    height: 200px;
+}
+.weather_today .place .tempurature .tem_number
+{
+    font-size: 80px;
+    font-family: sans-serif;
+    font-weight: 600;
+}
+
+/*weather week*/
+.weather_week .dayofweek
+{
+    width: 20vh;
+    height: max-content;
+    background-color: #f1fcff;
+    border-radius: 5px;
+    box-shadow:0 2px 2px #6a85c1;
+    margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.weather_week .dayofweek img
+{
+    width: 100px;
+    height: 100px;
+}
+.weather_week .dayofweek .line
+{
+    width: 90%;
+    border-bottom: solid 2px #395186ae;
+    margin-bottom: 5px;
+}
+
 @media (max-width: 768px)
 {
     .weather_today .place .tempurature
@@ -111,15 +157,32 @@ body
     {
         transform: scale(0.8);
     }
-}
-.weather_today .place .tempurature span img
-{
-    width: 200px;
-    height: 200px;
-}
-.weather_today .place .tempurature .tem_number
-{
-    font-size: 80px;
-    font-family: sans-serif;
-    font-weight: 700;
+
+    .weather_week
+    {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .weather_week .dayofweek
+    {
+        width: auto;
+        height: 40px;
+        margin: 0 5px 10px 5px;
+        display: inline;
+    }
+
+    .weather_week .dayofweek img
+    {
+        width: 40px;
+        height: 40px;
+        margin-left: 5px;
+    }
+    .weather_week .dayofweek .line
+    {
+        width: 0;
+        border: none;
+    }
+
 }
