--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ body
 .main
 {
     width: 90%;
+    height: fit-content;
     box-shadow: 0 3px 10px rgb(235, 235, 235);
-    margin: 100px 0;
+    margin-top: 100px;
     border-radius: 10px;
 }
 .weather_today
@@ -125,8 +126,8 @@ body
 {
     width: 20vh;
     height: max-content;
-    background-color: #f1fcff;
-    border-radius: 5px;
+    background-color: #f0fafffe;
+    border-radius: 15px;
     box-shadow:0 2px 2px #6a85c1;
     margin-bottom: 10px;
     display: flex;
@@ -144,9 +145,45 @@ body
     border-bottom: solid 2px #395186ae;
     margin-bottom: 5px;
 }
+.weather_week .dayofweek .day
+{
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+}
+.weather_week .dayofweek .day h1
+{
+    font-size: 1rem;
+    font-family: sans-serif;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.weather_week .dayofweek .day h2
+{
+    font-size: 5rem;
+    font-family: sans-serif;
+    color: #a70e00;
+    text-align: center;
+    margin: 20px 0 0 0;
+}
+.weather_week .dayofweek .day #pm
+{
+    font-size: 2rem;
+    font-family: sans-serif;
+    color: #2056ac;
+    text-align:center;
+    height: max-content;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+
 
 @media (max-width: 768px)
 {
+
     .weather_today .place .tempurature
     {
         display: flex;
@@ -162,7 +199,6 @@ body
     {
         display: flex;
         flex-direction: column;
-
     }
 
     .weather_week .dayofweek
@@ -170,19 +206,59 @@ body
         width: auto;
         height: 40px;
         margin: 0 5px 10px 5px;
-        display: inline;
+        display: inline-flex;
+        justify-content: start;
     }
 
     .weather_week .dayofweek img
     {
         width: 40px;
         height: 40px;
-        margin-left: 5px;
+        margin-left: 10px;
     }
     .weather_week .dayofweek .line
     {
         width: 0;
         border: none;
+        margin: 0;
+    }
+
+    .weather_week .dayofweek .day
+    {
+        width: 80%;
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        
+    }
+    .weather_week .dayofweek .day h1
+    {
+        width: 200px;
+        font-size: 1.5rem;
+        font-family: sans-serif;
+        font-weight: 600;
+        margin-left: 10px;
+        text-align: start;
+        margin-top: 0;
+        line-height: 40px;
+    }
+    .weather_week .dayofweek .day #am
+    {
+        font-size: 1.5rem;
+        font-family: sans-serif;
+        color: #a70e00;
+        text-align: end;
+        margin: 0;
+        line-height: 40px;
+    }
+    .weather_week .dayofweek .day #pm
+    {
+        font-size: 1.5rem;
+        font-family: sans-serif;
+        color: #2056ac;
+        text-align: end;
+        margin: 0;
+        line-height: 40px;
     }
 
 }
