--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,9 @@ body
 {
     width: 90%;
     height: fit-content;
-    margin-top: 100px;
+    margin-top: 50px;
     border-radius: 10px;
-    margin-bottom: 100px;
+    margin-bottom: 60px;
 }
 .weather_today
 {
@@ -119,6 +119,15 @@ body
     font-size: 80px;
     font-family: sans-serif;
     font-weight: 600;
+}
+
+.weather_today .place .tempurature .tem_feel
+{
+    font-size: 20px;
+    font-family: sans-serif;
+    color:#4b4a4a;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
 
 /*weather week*/
