--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,10 @@ body
     justify-content: center;
     height: max-content;
     min-height: 100vh;
-    background: linear-gradient(180deg, rgb(122, 188, 255) 0%, rgb(243, 255, 197) 100%);
+    background: linear-gradient(180deg, #00EEFF 0%, #00CFFF 100%);
+    background-image: url("/image/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .main
@@ -21,6 +24,7 @@ body
     border-radius: 10px;
     margin-bottom: 60px;
     position: relative;
+    box-shadow: 0 2px 3px #c3c3c3;
 }
 .weather_today
 {
@@ -82,6 +86,8 @@ body
     display: flex;
     width: max-content;
     gap: 0;
+    border-radius: 5px;
+    box-shadow: 0 2px 3px #00255c;
 }
 
 .weather_today .place .search input
@@ -90,16 +96,18 @@ body
     border-radius:5px 0 0 5px;
     border: none;
     padding-left: 5px;
+    background-color: #dbf5fb;
 }
 
 
 .weather_today .place .search button{
     width: max-content;
     height: 26px;
-    background-color: #f0ecfc;
+    color: #ffffff;
+    font-weight: 600;
     line-height: 26px;
     padding: 0;
-    background-image: linear-gradient(315deg, #f0ecfc 0%, #8ebfff 74%);
+    background-image: linear-gradient(315deg, #448cdf 0%, #1f69d8 74%);
     border: none;
     border-radius: 0 5px 5px 0;
   }
@@ -127,8 +135,9 @@ body
     align-content: center;
     width: max-content;
     padding: 0 5px;
-    background: linear-gradient(0deg, rgba(255,249,140,1) 0%, rgba(202,255,242,1) 100%);
+    background: linear-gradient(0deg, rgba(255,249,140,1) 0%, rgb(255, 248, 194) 100%);
     border-radius: 10px;
+    box-shadow: 0 2px 3px #00255c;
 }
 /*nhiet do*/
 .weather_today .place .tempurature
@@ -285,16 +294,25 @@ body .bg {
     .weather_today .place .search
     {
         display: flex;
+        width: 100%;
         flex-wrap: wrap;
         margin-top: 10px;
+        margin-left: 0;
     }
     .weather_today .place .search .searchInput
     {
+        width: 70%;
+        background-color: #dbf5fb;
         border-radius: 5px 0 0 0;
+    }
+    .weather_today .place .search .search_area
+    {
+        width: 100%;
     }
 
     .weather_today .place .search .btnsearch
     {
+        width: 30%;
         border-radius: 0 5px 0 0;
     }
 
