--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body
     justify-content: center;
     height: max-content;
     min-height: 100vh;
-    background-image: url("/image/bg.png");
+    background-image: url("image/bg.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
