--- a/styles.css
+++ b/styles.css
@@ -19,80 +19,82 @@ body
 
 .main
 {
-    width: 90%;
-    height: fit-content;
-    margin-top: 50px;
+    width: max-content;
+    margin: 50px;
     border-radius: 10px;
     margin-bottom: 60px;
     position: relative;
-    box-shadow: 0 2px 3px #c3c3c3;
+    display: flex;
+    justify-content: space-between;
 }
 .weather_today
 {
-    width: 100%;
+    width: max-content;
+    min-width: 258.388px;
     height: max-content;
-    background-color: rgba(255, 255, 255, 0.737);
+    background-color: rgba(255, 255, 255, 0.4);
     border-radius: 10px;
-    border-top: solid 2.5px white;
-    border-left: solid 1.5px white;
-    border-right: solid 1.5px white;
-
+    padding-bottom: 10px;
 }
 .weather_week
 {
-    width: 100%;
+    width: 65%;
     height: max-content;
-    background-color: rgba(255, 255, 255, 0.737);
-    border-radius: 0 0 10px 10px;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius:10px;
     border-bottom: solid 2.5px white;
     border-left: solid 1.5px white;
     border-right: solid 1.5px white;
     display: none;
     flex-wrap: wrap;
     justify-content: center;
-    padding-bottom: 10px;
+    padding: 20px 0;
 }
 
-
-
-
-.weather_today .place
+.weather_today .info
 {
-    display: inline;
-    height: 200px;
+    width: 90%;
+    height: max-content;
+    background: linear-gradient(204deg, rgb(171, 191, 239) 0%, rgb(43, 66, 136) 100%);
+    border-radius: 10px;
+    margin: auto;
+    display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.weather_today .infor_place
+{
     width: 100%;
 }
-.weather_today .place .infor_place
+.weather_today #result
 {
-    width: 100%;
-    margin-top: 10px;
-}
-.weather_today .place h1
-{
-    margin:0px 20px;
+    padding-left: 10px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
 }
-.weather_today .place .search
+.weather_today .search
 {
     position: relative;
     display: flex;
+    justify-content: center;
     align-items: center;
-    width: min-content;
-    height:50px;
-    margin-left: 20px;
+    width: 100%;
+    height:max-content;
+    margin-bottom: 10px;
 }
 
-.weather_today .place .search .search_area
+.weather_today .search .search_area
 {
     display: flex;
     width: max-content;
     gap: 0;
     border-radius: 10px;
     box-shadow: 0 2px 3px #00255c;
+    margin: 10px;
 }
 
-.weather_today .place .search .searchInput
+.weather_today .search .searchInput
 {
     height: 26px;
     border-radius:5px 0 0 5px;
@@ -103,7 +105,7 @@ body
 }
 
 
-.weather_today .place .search button{
+.weather_today .search button{
     width: max-content;
     height: 26px;
     color: #ffffff;
@@ -114,7 +116,7 @@ body
     border: none;
     border-radius: 0 5px 5px 0;
   }
-  .weather_today .place .search button span {
+  .weather_today .search button span {
     position: relative;
     display: block;
     width: 100%;
@@ -122,14 +124,14 @@ body
     padding: 0 5px;
     border-radius: 0 5px 5px 0;
   }
-  .weather_today .place .search button span:hover{
+  .weather_today .search button span:hover{
     color: #ffffff;
     background-image: linear-gradient(315deg, #395286 0%, #00255c 74%);
   }
 
-.weather_today .place .search .time
+.weather_today .search .time
 {
-    margin-left: 20px;
+    margin: 0 20px;
     font-size: 20px;
     font-family: sans-serif;
     color: #00255c;
@@ -143,44 +145,51 @@ body
     box-shadow: 0 2px 3px #00255c;
 }
 /*nhiet do*/
-.weather_today .place .tempurature
+.weather_today .tempurature
 {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    grid-row:auto;
+    flex-wrap: wrap;
+    grid-column:auto;
+    justify-content: center ;
     gap: 20px;
     margin: 0 10px;
 }
-
-.weather_today .place .tempurature span img
+.weather_today .tempurature .detail_img
+{
+    width: 100%;
+    align-content: center;
+    justify-content: center;
+    display: flex;
+}
+.weather_today .tempurature .detail_img img
 {
     width: 200px;
     height: 200px;
 }
-.weather_today .place .tempurature .tem_number
+.weather_today .tempurature .tem_number
 {
-    font-size: 100px;
     font-family: sans-serif;
     font-weight: 600;
+    font-size: 65px;
 }
 
 
-.weather_today .place .tempurature .details
+.weather_today .tempurature .details
 {
     width: 90%;
     display: flex;
     align-items: center;
     flex-direction: row;
-    
+    justify-content: center;
 }
 
-.weather_today .place .tempurature .tem_feel,.weather_today .place .tempurature .tem_max,
-.weather_today .place .tempurature .tem_min
+.weather_today .tempurature .tem_feel,.weather_today .tempurature .tem_max,
+.weather_today .tempurature .tem_min
 {
+    text-align: center;
     font-size: 20px;
     font-family: sans-serif;
-    color:#252525;
+    color:#ffffff;
     font-weight: 550;
     margin-bottom: 10px;
 }
@@ -206,10 +215,6 @@ body .bg {
   }
 
 /*weather week*/
-.weather_week #tuna
-{
-    display: inline;
-}
 .weather_week h1
 {
     font-family: sans-serif;
@@ -224,25 +229,39 @@ body .bg {
     display: flex;
     justify-content: center;
     margin: 10px;
-    width: 100%;
+    width: 70%;
 
 }
 .weather_week #temperatureChart
 {
-    width: 100%;
+    width: 70%;
 }
 
 
 @media (max-width: 768px)
 {
-    .weather_today .place .search
+    .main
+    {
+        margin: 30px;
+        display: block;
+    }
+    .weather_today
+    {
+        width: 100%;
+    }
+    .weather_week
+    {
+        margin-top: 20px;
+        height: 500px; 
+    }
+    .weather_today .search
     {
         display: flex;
         width: 100%;
         flex-wrap: wrap;
         margin-left: 0;
     }
-    .weather_today .place .search .searchInput
+    .weather_today .search .searchInput
     {
         width: 70%;
         background-color: rgb(228, 253, 252);
@@ -253,13 +272,13 @@ body .bg {
         width: 100%;
     }
 
-    .weather_today .place .search .btnsearch
+    .weather_today .search .btnsearch
     {
         width: 30%;
         border-radius: 0 10px 0 0;
     }
 
-    .weather_today .place .search .time
+    .weather_today .search .time
     {
         margin-left: 0px;
         width: 100%;
@@ -268,7 +287,7 @@ body .bg {
         justify-content: center;
     }
 
-    .weather_today .place .tempurature
+    .weather_today .tempurature
     {
         display: flex;
         flex-direction: column;
@@ -276,20 +295,20 @@ body .bg {
     }
 
 
-    .weather_today .place .tempurature .tem_number
+    .weather_today .tempurature .tem_number
     {
         transform: scale(0.8);
     }
 
 
-    .weather_today .place .tempurature .details
+    .weather_today .tempurature .details
     {
         display: flex;
         flex-direction: column;
         margin-bottom: 20px;
     }
 
-    .weather_today .place .tempurature .details .temmm
+    .weather_today .tempurature .details .temmm
     {
         display: flex;
         flex-direction: column;
